# DouPipeline

./: .env.example  .gitignore  .scheduler_daemon.sh  README.md  account_manager.py  byte.py  byte_img.py  doubao.json  doubao.py  everday_hot.json  everday_hot_20260531_091319_428.json  generate.py  novel_generator.py  prompts.json  pyproject.toml  redbook.json  remove_watermark.py  run.py  run_scheduler.sh  scheduler.py  test.py  test2.py  xiaohongshu.json  每日热搜文案-2026-05-29.md
.claude/plans/: tender-tickling-bicycle.md
.claude/skills/xiaoliang/: SKILL.md  meta.json  persona.md  self.md
douyin/: __init__.py  publisher.py
fanqie/: __init__.py  debug_page.py  publisher.py
logs/: 2026-05-31.jsonl
prompts/instructions/: article.md  image.md  novel_architecture.md  novel_chapter.md  swimwear.md  xiaohongshu.md
prompts/roles/: article.md  image.md  novel.md  swimwear.md  xiaohongshu.md
xiaohongshu/: __init__.py  publisher.py
